--- a/static/om-mig.html
+++ b/static/om-mig.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Magnus Danielsen Portfolio</title>
+  <link rel="stylesheet" href="/css/headerfooter.css">
   <link rel="stylesheet" href="/css/om-mig.css">
   <script src="/js/script.js"></script>
   <script src="https://kit.fontawesome.com/5e2cb9f1be.js" crossorigin="anonymous"></script>
@@ -46,7 +47,7 @@
     <button class="topnav-button1"><a href="/index.html/">Forside</button></a>
     <button class="topnav-button2"><a href="/posts/">Blog</button></a>
     <button class="topnav-button3"><a href="/projekter.html/">Projekter</button></a>
-    <button class="topnav-button4"><a href="/om-mig.html/">Om Mig</button></a>
+    <button class="topnav-button4 btn-active"><a href="/om-mig.html/">Om Mig</button></a>
   </div>
 
 
